# ball-e

./: .gitignore  CMakeLists.txt  README.md
CGL/include/CGL/: vector3D.h
docs/: final.md  index.md  proposal.md  report.md
enc_temp_folder/6557eea7c4c5c7bfceb4e1daf328a4/: clothSimulator.cpp
enc_temp_folder/f1f0125e1b195a648063418e6ebc5390/: clothSimulator.cpp
samples/: seastar.balle  stick_fig.balle  trex.balle
shaders/: Wireframe.frag
src/: CMakeLists.txt  GUI.cpp  GUI.h  bmesh.cpp  bmesh.h  cloth.cpp  cloth.h  clothSimulator.cpp  clothSimulator.h  logger.cpp  logger.h  main.cpp
src/bmesh/: bmesh.cpp  bmesh.h  primitives.h  quickhull.h  renderer.cpp  renderer.h  skeletalNode.h
src/collision/: plane.cpp  sphere.cpp
src/mesh/: halfEdgeMesh.cpp  halfEdgeMesh.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/misc/: sphere_drawing.cpp  sphere_drawing.h
